IDE-2367 remove support MaxPermSize on java8